--- a/app/globals.scss
+++ b/app/globals.scss
@@ -21,26 +21,112 @@ body {
 }
 
 body {
+  font-family: 'Montserrat';
   background: $primary-color;
 }
 /* First Section */
 
 .first-sec{
-  height: 1586px;
+  height: fit-content;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
+  overflow: hidden;
+  .gradient-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1080px;
+    background: linear-gradient(180deg, rgba(241,234,234,1) 42%, rgba(241,234,234,0) 100%);
+  }
   .logo-warp{
     position: absolute;
     top: 27%;
     left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
+    transform: translate(-50%, -50%);
     gap: 1rem;
-
+    animation: BlurScaleIn 2s forwards;
+  }
+  .main-bg{
+    margin-top: 150px;
+    z-index: -1;
+    animation: MoveDownIn 3s forwards;
   }
 }
 
+.second-sec{
+  height: 600px;
+  width: 100%;
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  justify-content: center;
+  p{
+    color: $secondary-color;
+    font-size: 25px;
+    &::selection{
+      background-color: $dark-color;
+  }
+  }
+}
+
+.third-sec{
+  background-color: $dark-color;
+  height: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  .txt-warp{
+    width: 37%;
+    padding: 20px 100px;
+    p{
+      left: 100px;
+      position: absolute;
+      color: white;
+      font-weight:600;
+      font-size: 61px;
+      opacity: 0;
+      &.active{
+        opacity: 1;
+      }
+    }
+  }
+}
+
+/* Common Clases */
+
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Animations */
+
+@keyframes BlurScaleIn {
+  0%{
+    filter: blur(15px);
+    opacity: 0;
+  }
+  100%{
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+@keyframes MoveDownIn {
+  0%{
+    filter: blur(15px);
+    transform: translateY(-150px);
+  }
+  100%{
+    filter: blur(0);
+    transform: translateY(0);
+  }
+}
