--- a/app/globals.scss
+++ b/app/globals.scss
@@ -48,14 +48,27 @@ p{
     background-color: $dark-color;
   }
 }
+
+h1{
+  padding: 0;
+  margin: 0;
+}
+
+a{
+  text-decoration: none;
+  transition: .3s ease-out;
+  &:hover{
+    transform: scale(1.05);
+  }
+}
 /* First Section */
 
 .nav-bar{
   position: absolute;
   gap: 2rem;
-  top: 47%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -40%);
   width: 100%;
   padding: 30px;
   animation: BlurScaleIn 2s forwards;
@@ -64,7 +77,7 @@ p{
     transition: .2s ease-out;
     cursor: pointer;
     text-align: center;
-    color: $secondary-color;
+    color: $dark-color;
     &:hover{
       font-weight: 700;
     }
@@ -74,7 +87,7 @@ p{
     top: 0;
     left: 0;
     transform: translate(0);
-    background-color: $secondary-color;
+    background-color: $dark-color;
     z-index: 2;
     animation: MoveDownIn .3s forwards;
     .nav-item{
@@ -98,30 +111,27 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  flex-direction: column;
   overflow: hidden;
-  .gradient-overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 1080px;
-    background: linear-gradient(180deg, rgba(241,234,234,1) 42%, rgba(241,234,234,0) 100%);
-  }
+  transition: .3s ease-out all;
   .logo-warp{
-    position: absolute;
-    top: 27%;
-    left: 50%;
     display: flex;
     flex-direction: column;
-    transform: translate(-50%, -50%);
-    gap: 1rem;
+    gap: 2rem;
+    width: 100%;
+    height: 700px;
+    padding-bottom: 100px;
     animation: BlurScaleIn 2s forwards;
   }
-  .main-bg{
-    margin-top: 150px;
-    z-index: -1;
-    animation: MoveDownIn 3s forwards;
+    
+  @media (max-width: 600px) {
+    .logo-warp{
+      gap: 0.8rem;
+      img{
+        width: 140px;
+        height: auto;
+      }
+    }
   }
 }
 
@@ -190,6 +200,7 @@ p{
   width: 100%;
   height: 650px;
   position: relative;
+  overflow: hidden;
   .bg-texture{
     position: absolute;
     z-index: -1;
@@ -232,6 +243,184 @@ p{
   }
 }
 
+.sixth-sec{
+  width: 100%;
+  height: 1500px;
+  padding: 100px;
+  .header-warp{
+    display: flex;
+    flex-direction: row;
+    color: $secondary-color;
+    justify-content: space-between;
+    margin-bottom: 100px;
+    h1{
+      font-size: 60px;
+    }
+    .price-warp{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      span{
+        font-size: 30px;
+      }
+      h1{
+        font-size: 80px;
+      }
+    }
+  }
+  .body-warp{
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    .img{
+      overflow: hidden;
+      position: relative;
+      transition: .4s ease-out all;
+      background-color: $dark-color;
+      span{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 25px;
+        font-weight: 700;
+        color: $primary-color;
+        cursor: default;
+        opacity: 0;
+        transition: .4s ease-out all;
+        z-index: 1;
+        text-align: center;
+      }
+      img{
+        transition: .4s ease-out all;
+      }
+      &:hover{
+        cursor: pointer;
+        span{
+          opacity: 1;
+        }
+        img{
+          opacity: 0.5;
+        }
+      }
+    }
+    .img-warp{
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+      overflow: hidden;
+    }
+  }
+  .dossier-link{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100px;
+    a{
+      color: $secondary-color;
+      gap: 1rem;
+    }
+  }
+}
+
+.seventh-sec{
+  height: fit-content;
+  background-color: white;
+  padding: 100px;
+  .content-warp{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    .info-sec{
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-start;
+      flex-direction: column;
+      gap: 2rem;
+      width: 40%;
+      .text-warp{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        h1{
+          font-size: 30px;
+        }
+        p{
+          font-size: 20px;
+          font-weight: 200;
+          b{
+            font-style: italic;
+          }
+        }
+      }
+      .logos-warp{
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
+      }
+      .link-warp{
+        display: flex;
+        justify-content: flex-start;
+        a{
+          color: $dark-color;
+          gap: 1rem;
+        }
+      }
+    }
+    .img-sec{
+      overflow: hidden;
+      width: 60%;
+      img{
+        width: 100%;
+        height: auto;
+      }
+      .names-warp{
+        cursor: default;
+        gap: 2rem;
+        font-size: 12px;
+        margin-top: 1rem;
+      }
+    }
+  }
+}
+
+.eigth-sec{
+  background-color: $dark-color;
+  width: 100%;
+  padding: 100px;
+  height: fit-content;
+  .header-logos{
+    justify-content: space-between;
+    img{
+      fill: $primary-color;
+    }
+  }
+  .body-contact{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .col{
+      margin-top: 100px;
+      gap: 1rem;
+      display: flex;
+      flex-direction: column;
+      color: $primary-color;
+      font-weight: 700;
+      h1{
+        margin-bottom: 10px;
+      }
+      span{
+        a{
+          justify-content: flex-start;
+          gap: 1rem;
+          color: $primary-color;
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+
 /* Common Clases */
 
 .center{
@@ -255,7 +444,9 @@ p{
   color: white;
 }
 
-
+.light-txt{
+  font-weight: 200;
+}
 
 /* Animations */
 
