--- a/app/globals.scss
+++ b/app/globals.scss
@@ -18,6 +18,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  position: relative;
+
 }
 
 body {
@@ -61,14 +63,12 @@ a{
     transform: scale(1.05);
   }
 }
-/* First Section */
+
+.app{
+}
 
 .nav-bar{
-  position: absolute;
   gap: 2rem;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -40%);
   width: 100%;
   padding: 30px;
   animation: BlurScaleIn 2s forwards;
@@ -103,7 +103,92 @@ a{
     z-index: 2;
     animation: MoveUpOut .3s forwards;
   }
+  @media (max-width: 600px) {
+    display: none !important;
+    opacity: 0;
+  }
 }
+
+.menu{
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 20px 0;
+  display: none;
+  justify-content: flex-start;
+  background-color: $dark-color;
+  color: $primary-color;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
+  transition: .4s ease-out;
+  .center{
+    position: fixed;
+    margin-left: 40px;
+    gap: 0.5rem;
+    cursor: pointer;
+    opacity: 1;
+    transition: .4s ease-out;
+  }
+  .menu-items{
+    position: absolute;
+    transform: translateY(-150%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 100px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    gap: 2rem;
+    transition: .3s ease-out;
+    .menu-item{
+      font-size: 35px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: .3s ease-out;
+      &:hover{
+        transform: scale(1.05);
+      }
+    }
+  }
+  .close{
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 40px;
+    cursor: pointer;
+    transition: .3s ease-out;
+    opacity: 0;
+    z-index: 11;
+    .icon{
+      transform: scale(2);
+    }
+    &:hover{
+      transform: scale(1.1);
+    }
+  }
+  &.active{
+    .center{
+      opacity: 0;
+    }
+    .close{
+      opacity: 1;
+    }
+    .menu-items{
+      opacity: 1;
+      transform: translateY(0);
+    }
+    height: 100vh;
+  }
+  @media (max-width: 600px) {
+    display: flex;
+  }
+}
+
+/* First Section */
+
 
 .first-sec{
   height: fit-content;
@@ -115,21 +200,42 @@ a{
   overflow: hidden;
   transition: .3s ease-out all;
   .logo-warp{
+    height: 500px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     width: 100%;
-    height: 700px;
     padding-bottom: 100px;
     animation: BlurScaleIn 2s forwards;
+  }
+  .main-render{
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    height: 400px;
+    img{
+      width: 100%;
+      height: auto;
+    }
   }
     
   @media (max-width: 600px) {
     .logo-warp{
       gap: 0.8rem;
+      height: 300px;
+      padding-top: 100px;
+      padding-bottom: 0;
       img{
         width: 140px;
         height: auto;
+      }
+    }
+    .main-render{
+      img{
+        height: auto;
+        width: 100%;
       }
     }
   }
@@ -148,6 +254,16 @@ a{
     font-size: 25px;
     &::selection{
       background-color: $dark-color;
+    }
+  }
+  @media (max-width: 600px) {
+    padding: 40px;
+    .sm-logo{
+      width: 80px;
+      height: auto;
+    }
+    p{
+      font-size: 16px;
     }
   }
 }
@@ -194,6 +310,23 @@ a{
       }
     }
   }
+  @media (max-width: 600px) {
+    height: 800px;
+    flex-direction: column;
+    .txt-warp{
+      position: relative;
+      width: 100%;
+      height: 600px;
+      padding: 100px 40px;
+      p{
+        left: 40px;
+        top: 100px;
+      }
+    }
+    .img-slider{
+      width: 100%;
+    }
+  }
 }
 
 .fourth-sec{
@@ -211,6 +344,20 @@ a{
     font-weight: 600;
     &::selection{
       background-color: $dark-color;
+    }
+  }
+  @media (max-width: 600px) {
+    height: 280px;
+    padding: 40px 100px;
+    .bg-texture{
+
+      img{
+        width: 90%;
+        height: auto;
+      }
+    }
+    h1{
+      font-size: 20px;
     }
   }
 }
@@ -239,6 +386,21 @@ a{
       width: 55%;
       height: 100%;
       overflow: hidden;
+    }
+  }
+  @media (max-width: 600px) {
+    .card{
+      flex-direction: column;
+      height: fit-content;
+      .text-warp{
+        width: 100%;
+        height: 600px;
+        padding: 100px 40px;
+      }
+      .img-warp{
+        height: 350px;
+        width: 100%;
+      }
     }
   }
 }
@@ -321,6 +483,27 @@ a{
       gap: 1rem;
     }
   }
+  @media (max-width: 600px) {
+    padding: 100px 40px;
+    .header-warp{
+      flex-direction: column;
+      gap: 1rem;
+      justify-content: flex-end;
+      h1{
+        text-align: end;
+        font-size: 40px;
+      }
+    }
+    .body-warp{
+      flex-direction: column;
+      .img{
+        #dep1, #dep2, #dep3{
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+  }
 }
 
 .seventh-sec{
@@ -382,6 +565,41 @@ a{
       }
     }
   }
+  @media (max-width:600px) {
+    padding: 100px 40px;
+    .content-warp{
+      flex-direction: column;
+      .info-sec{
+        width: 100%;
+        .text-warp{
+          h1{
+            font-size: 20px;
+          }
+          p{
+            font-size: 14px;
+          }
+        }
+        .logos-warp{
+          img{
+            height: 70px;
+            width: auto;
+          }
+        }
+        .link-warp{
+          font-size: 15px;
+        }
+      }
+      .img-sec{
+        width: 100%;
+        .names-warp{
+          display: flex;
+          flex-direction: column;
+          gap: 0.5rem;
+        }
+      }
+    }
+    
+  }
 }
 
 .eigth-sec{
@@ -416,6 +634,24 @@ a{
           color: $primary-color;
           font-weight: 700;
         }
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    padding: 100px 40px;
+    .header-logos{
+      img{
+        height: 40px;
+        width: auto;
+      }
+    }
+    .body-contact{
+      flex-direction: column;
+      h1{
+        font-size: 20px;
+      }
+      span{
+        font-size: 15px;
       }
     }
   }
