--- a/app/globals.scss
+++ b/app/globals.scss
@@ -137,7 +137,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 100px;
+    padding: 100px 80px;
     width: 100%;
     height: 100%;
     opacity: 0;
