--- a/app/globals.scss
+++ b/app/globals.scss
@@ -334,6 +334,9 @@ a{
   height: 650px;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .bg-texture{
     position: absolute;
     z-index: -1;
@@ -350,9 +353,14 @@ a{
     height: 280px;
     padding: 40px 100px;
     .bg-texture{
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       img{
-        width: 90%;
+        width: 150%;
         height: auto;
       }
     }
