--- a/app/globals.scss
+++ b/app/globals.scss
@@ -478,6 +478,7 @@ a{
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    justify-content: center;
     .img{
       overflow: hidden;
       position: relative;
