--- a/app/globals.scss
+++ b/app/globals.scss
@@ -144,10 +144,18 @@ a{
     gap: 2rem;
     transition: .3s ease-out;
     .menu-item{
-      font-size: 35px;
       font-weight: 700;
       cursor: pointer;
       transition: .3s ease-out;
+      a{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        font-size: 30px;
+        .icon-container{
+          width: 40px;
+        }
+      }
       &:hover{
         transform: scale(1.05);
       }
@@ -178,7 +186,7 @@ a{
     }
     .menu-items{
       opacity: 1;
-      transform: translateY(0);
+      transform: translateY(-50px);
     }
     height: 100vh;
   }
@@ -307,10 +315,25 @@ a{
       width: 15%;
       overflow: hidden;
       transition: .3s ease-out;
-      opacity: 0.5;
+      position: relative;
+      img{
+        opacity: 0.5;
+      }
+      .icon-click{
+        position: absolute;
+        z-index: 1;
+        color: $primary-color;
+        font-size: 12px;
+        font-weight: 500;
+      }
       &.active{
         width: 70%;
-        opacity: 1;
+        img{
+          opacity: 1;
+        }
+        .icon-click{
+          opacity: 0;
+        }
       }
     }
   }
@@ -406,6 +429,7 @@ a{
     height: 560px;
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
     .text-warp{
       width: 45%;
       height: 100%;
@@ -429,10 +453,12 @@ a{
     .card{
       flex-direction: column;
       height: fit-content;
+      justify-content: flex-start;
       .text-warp{
         width: 100%;
-        height: 500px;
-        padding: 100px 40px;
+        height: 380px;
+        padding: 40px 40px;
+        justify-content: flex-start;
         p{
           font-size: 18px;
         }
@@ -471,6 +497,33 @@ a{
       }
       h1{
         font-size: 80px;
+      }
+    }
+  }
+  .info-deps{
+    border-top: solid 1px $secondary-color;
+    padding-top: 20px;
+    margin-bottom: 50px;
+    .tit-info{
+      margin-bottom: 30px;
+      span{
+        color: $secondary-color;
+        font-size: 19px;
+      }
+    }
+    .deps-link{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      .deps-col{
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+        a{
+          color: $secondary-color;
+          font-size: 17px;
+          font-weight: 600;
+        }
       }
     }
   }
@@ -559,6 +612,11 @@ a{
         span{
           font-size: 20px;
         }
+      }
+    }
+    .info-deps{
+      .deps-link{
+        justify-content: space-between;
       }
     }
   }
