--- a/app/globals.scss
+++ b/app/globals.scss
@@ -219,13 +219,44 @@ a{
   .main-render{
     width: 100%;
     height: fit-content;
-    padding: 0;
-    margin: 0;
+    position: relative;
     overflow: hidden;
-    transition: .3s ease-out;
-    img{
+    .slider-nav{
+      position: absolute;
+      z-index: 10;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+      background-color: rgba($color: #dbdbdb04, $alpha: 0.5);
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 5px;
+      cursor: pointer;
+      &.left{
+        left: 40px;
+      }
+      &.rigth{
+        left: calc(100% - 40px);
+      }
+      transition: .3s ease-out;
+      &:hover{
+        background-color: $dark-color;
+        color: $primary-color;
+      }
+    }
+    .main-slider{
       width: 100%;
-      height: auto;
+      height: 100%;
+      .slidy-container{
+        display: flex;
+        transition: .5s ease-out;
+        .slidy{
+          width: 100%;
+          height: auto;
+        }
+      }
     }
   }
     
@@ -242,9 +273,9 @@ a{
       }
     }
     .main-render{
-      img{
-        height: auto;
+      .slidy{
         width: 100%;
+        height: auto !important;
       }
     }
   }
